Fix styling of characters so they don't get cut off

--- a/wall/public/wall-maker/css/wall-maker.css
+++ b/wall/public/wall-maker/css/wall-maker.css
@@ -680,10 +680,13 @@ button span.icon {
  */
 #manage-character .modal-body {
   text-align: center;
-  max-height: none;
+  max-height: 70vh;
+  overflow-y: auto;
 }
 #manage-character img {
   margin: 1em;
+  width: 80%;
+  max-height: 50vh;
 }
 #manage-character .url {
   display: inline-block;
